projects/vb6parse/snapshots/tests/class/endless_runner_game_vb6_0/endless_runner_game_vb6_0_game_class_load.snap
---
source: projects/vb6parse/tests/class/endless_runner_game_vb6_0.rs
expression: class
---
header:
  version:
    major: 1
    minor: 0
  properties:
    multi_use: MultiUse
    persistable: NotPersistable
    data_binding_behavior: None
    data_source_behavior: None
    mts_transaction_mode: NotAnMTSObject
  attributes:
    name: game
    global_name_space: Local
    creatable: "True"
    predeclared_id: "False"
    exposed: "False"
    description: ~
    ext_key:
      VB_Ext_KEY: "Yes"
cst:
  root:
    kind: Root
    children:
      - kind: DimStatement
        children:
          - kind: DimKeyword
            text: Dim
          - kind: Whitespace
            text: " "
          - kind: Identifier
            text: name
          - kind: Whitespace
            text: " "
          - kind: AsKeyword
            text: As
          - kind: Whitespace
            text: " "
          - kind: StringKeyword
            text: String
          - kind: Newline
            text: "\r\n"
      - kind: DimStatement
        children:
          - kind: DimKeyword
            text: Dim
          - kind: Whitespace
            text: " "
          - kind: Identifier
            text: marks
          - kind: Whitespace
            text: " "
          - kind: AsKeyword
            text: As
          - kind: Whitespace
            text: " "
          - kind: IntegerKeyword
            text: Integer
          - kind: Newline
            text: "\r\n"
      - kind: Newline
        text: "\r\n"
      - kind: SubStatement
        children:
          - kind: PublicKeyword
            text: Public
          - kind: Whitespace
            text: " "
          - kind: SubKeyword
            text: Sub
          - kind: Whitespace
            text: " "
          - kind: Identifier
            text: getdata
          - kind: ParameterList
            children:
              - kind: LeftParenthesis
                text: (
              - kind: RightParenthesis
                text: )
          - kind: Newline
            text: "\r\n"
          - kind: StatementList
            children:
              - kind: NameStatement
                children:
                  - kind: NameKeyword
                    text: name
                  - kind: Whitespace
                    text: " "
                  - kind: IdentifierExpression
                    children:
                      - kind: EqualityOperator
                        text: "="
                  - kind: Whitespace
                    text: " "
                  - kind: StringLiteral
                    text: "\"harii\""
              - kind: Newline
                text: "\r\n"
              - kind: AssignmentStatement
                children:
                  - kind: IdentifierExpression
                    children:
                      - kind: Identifier
                        text: marks
                  - kind: Whitespace
                    text: " "
                  - kind: EqualityOperator
                    text: "="
                  - kind: Whitespace
                    text: " "
                  - kind: NumericLiteralExpression
                    children:
                      - kind: IntegerLiteral
                        text: "55"
                  - kind: Newline
                    text: "\r\n"
          - kind: EndKeyword
            text: End
          - kind: Whitespace
            text: " "
          - kind: SubKeyword
            text: Sub
          - kind: Newline
            text: "\r\n"
      - kind: Newline
        text: "\r\n"
      - kind: Newline
        text: "\r\n"
      - kind: SubStatement
        children:
          - kind: PublicKeyword
            text: Public
          - kind: Whitespace
            text: " "
          - kind: SubKeyword
            text: Sub
          - kind: Whitespace
            text: " "
          - kind: Identifier
            text: message
          - kind: ParameterList
            children:
              - kind: LeftParenthesis
                text: (
              - kind: RightParenthesis
                text: )
          - kind: Newline
            text: "\r\n"
          - kind: StatementList
            children:
              - kind: CallStatement
                children:
                  - kind: Identifier
                    text: MsgBox
                  - kind: Whitespace
                    text: " "
                  - kind: ArgumentList
                    children:
                      - kind: Argument
                        children:
                          - kind: StringLiteralExpression
                            children:
                              - kind: StringLiteral
                                text: "\"&name\""
                  - kind: Newline
                    text: "\r\n"
              - kind: CallStatement
                children:
                  - kind: Identifier
                    text: MsgBox
                  - kind: Whitespace
                    text: " "
                  - kind: ArgumentList
                    children:
                      - kind: Argument
                        children:
                          - kind: StringLiteralExpression
                            children:
                              - kind: StringLiteral
                                text: "\"&marks\""
                  - kind: Newline
                    text: "\r\n"
          - kind: EndKeyword
            text: End
          - kind: Whitespace
            text: " "
          - kind: SubKeyword
            text: Sub
          - kind: Newline
            text: "\r\n"
      - kind: Newline
        text: "\r\n"
